[package]
name = "mapad"
version = "0.41.1-alpha.0"
description = "An aDNA aware short-read mapper"
authors = ["J. Christian Heide <christian_heide@eva.mpg.de>"]
edition = "2021"
readme = "Readme.md"
publish = false
rust-version = "1.62.1"

[dependencies]
clap = { version = "4.0", features = ["cargo", "string"] }
log = "0.4"
simple_logger = "4.0"
bincode = "1.3"
bio = { git = "https://github.com/jch-13/rust-bio.git", branch = "occ_small_k", features = ["runtime-dispatch-simd"] }
assert_approx_eq = "1.1"
smallvec = "1.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
snap = "1.0"
either = "1.6"
rayon = "1.5"
mio = { version = "0.8", features = ["os-poll", "net"] }
min-max-heap = { git = "https://github.com/tov/min-max-heap-rs", branch = "master"}
slab = "0.4"
anyhow = "1.0"
mimalloc = { version = "0.1", default-features = false }
noodles = { version = "0.34", features = ["bam", "bgzf", "core", "cram", "fasta", "fastq", "sam"] }
time = { version = "0.3", features = ["local-offset"] }
flate2 = "1.0"

[dev-dependencies]
criterion = "0.4"
tempfile = "3.3"

[build-dependencies]
built = { version = "0.6", features = ["git2"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
lto = "fat"
codegen-units = 1
